WIP dynamic promo banner. Should only appear when there's a future event.

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -163,8 +163,8 @@
     &-light {
         font-weight: $font-weight-light !important;
     }
-    &-strong {
-        font-weight: bolder !important;
+    &-strong, &-bold {
+        font-weight: $font-weight-bold !important;
     }
     // &-italic {
     //     font-style: italic;
