--- a/source/layouts/basic.erb
+++ b/source/layouts/basic.erb
@@ -14,7 +14,7 @@
     </head>
     <% if build? %><%= partial "partials/scripts/google-tm-body" %><% end %>
     <body class="<%= page_classes %>">
-        <%= partial "partials/snippets/alert-ribbon" %>
+        <%#= partial "partials/snippets/alert-ribbon" %>
         <%= yield %>
         <%= partial "partials/snippets/footer" %>
         <%= partial "partials/scripts/footer" %>
