--- a/source/layouts/listing.erb
+++ b/source/layouts/listing.erb
@@ -29,7 +29,7 @@
                 </div>
             </section>
         </div>
-        <%= partial "partials/snippets/alert-ribbon" %>
+        <%#= partial "partials/snippets/alert-ribbon" %>
         <%= yield %>
         <%= partial "partials/snippets/footer" %>
         <%= partial "partials/scripts/footer" %>
