--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -1,4 +1,4 @@
-<footer class="section-article container-color--gray-gradient main-footer">
+<footer role="contentinfo" class="section-article container-color--gray-gradient main-footer">
     <div class="row small-up-2 medium-up-3 large-up-6">
         <% data.nav_all.each do |f| %>
             <div class="column group">
