--- a/source/layouts/products.erb
+++ b/source/layouts/products.erb
@@ -11,7 +11,7 @@
     </head>
     <% if build? %><%= partial "partials/scripts/google-tm-body" %><% end %>
     <body class="<%= page_classes %> container-gray-11">
-        <%= partial "partials/snippets/alert-ribbon" %>
+        <%#= partial "partials/snippets/alert-ribbon" %>
         <div class="strip-bright"></div>
         <div class="container-gray-2">
             <%= partial "partials/head/header", :locals => { :style => "light" } %>
