--- a/source/assets/scss/modules/buttons.scss
+++ b/source/assets/scss/modules/buttons.scss
@@ -36,9 +36,11 @@
     &--light, &--tertiary { // use these on dark or busy backgrounds
         @include gradient(to bottom, white 0%, $gray-12 100%);
         // @include shadow-anarchy(inset 0 -1px 2px 0 #B3C8D6);
-        color: darken($color_product, 20%);
+        // background-color: $gray-12;
+        color: darken($color_product, 20%) !important; // not sure what .container rule is overriding this, it's lower in the OOO
         &:hover, &:active, &:focus {
-            color: black;
+            color: black !important;
+            background-color: white;
             // @include gradient(to bottom, $gray-12 0%, $gray-11 100%);
         }
     }
