--- a/source/contentful_templates/report.html.slim
+++ b/source/contentful_templates/report.html.slim
@@ -75,6 +75,6 @@ section.section-article--med.container-gray-11
                     = partial "partials/snippets/form", :locals => { :the_form => p["related_form"]["custom_form"] }
 
 - if p.has_key?("bg_image")
-    section.show-for-medium.section-article.container-image-fill data-background-image="#{p.bg_image.url}?fit=thumb&w=1800&h=400&fm=jpg&q=50"
+    section.lozad.show-for-medium.section-article.container-image-fill data-background-image="#{p.bg_image.url}?fit=thumb&w=1800&h=400&fm=jpg&q=50"
 - else
-    section.show-for-medium.container-gray-5.container-image--fixed data-background-image="//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=thumb&w=1800&h=200&fm=jpg&q=50"
+    section.lozad.show-for-medium.container-gray-5.container-image--fixed data-background-image="//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=thumb&w=1800&h=200&fm=jpg&q=50"
