--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -52,15 +52,15 @@ ruby:
 .strip-bright.strip-bright--small
 .container-gray-11
     = partial "partials/head/header", :locals => { :style => "dark" }
-    section#webinar.section-article data-webinar = p._meta.id
+    section#webinar.section-article--med data-webinar = p._meta.id
         .row.align-center
             .columns.small-12.large-6.text-center.group
-                = inline_svg("icon-webinar", class: "icon-size--large")
-                h2.headline-5.spaced-out
-                    a.link--dark href="/webinars" Datica Webinars
+                a href="/webinars" title="See all webinars"
+                    = inline_svg("icon-webinar", class: "icon-size--large")
+                    h2.headline-5.spaced-out Datica Webinars
         .row.align-center
             .columns.small-12.large-10.group
-                #webinar-container.preview.container-gray-2.relative href="/webinars/#{p["slug"]}" title=("View webinar")
+                #webinar-container.preview.container-gray-3.relative href="/webinars/#{p["slug"]}" title=("View webinar")
                     #webinar-play.hide.z-stack-10.relative
                         - if p.has_key?("video_embed")
                             .group
@@ -76,7 +76,7 @@ ruby:
                                 li
                                     span.label.info.round = data.site.discover[p.discovery_topic.id].title
                         - if p.has_key?("authors")
-                            aside
+                            aside#webinar-authors
                                 .subhead--spaced.faded.headline-6.group--sm Presented by
                                 - p["authors"].each do | author |
                                     p
@@ -87,9 +87,19 @@ ruby:
                             
                     #webinar-bg.absolute.preview-bg.z-stack-0.group.img-multiply.blur-2
                         img.lozad.img-cover src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
-
-
+    section#description.section-article--med
         .row.align-center
+            .columns.small-12.large-6
+                /h4.headline-5
+                    /p = today.in_time_zone("Central Time (US & Canada)").strftime('%A, %B %-d, %Y, %l:%M %p')
+                    = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+                    span = event_date_full
+                - if p.has_key?("lead")
+                    .lead
+                        = Kramdown::Document.new(p["lead"]).to_html
+                - if p.has_key?("desc")
+                    article.group.content-dynamic
+                        = Kramdown::Document.new(p["desc"]).to_html
             .columns.small-12.large-4
                 - if is_future == true
                     .is-registered.callout.drop.hide
@@ -106,25 +116,15 @@ ruby:
                                     = partial("partials/snippets/person", :locals => { :p => author, :classes => "" })
                 - if p.has_key?("related_form")
                     #report-form.hide
-                        .callout.drop
+                        .callout.drop.group
                             h3.headline-4.text-center.group Register to attend
                             = partial "partials/snippets/form", :locals => { :the_form => data.site.forms[p.related_form.id].custom_form }
-            .columns.small-12.large-6
-                /h4.headline-5
-                    /p = today.in_time_zone("Central Time (US & Canada)").strftime('%A, %B %-d, %Y, %l:%M %p')
-                    = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
-                    span = event_date_full
-                - if p.has_key?("lead")
-                    .lead
-                        = Kramdown::Document.new(p["lead"]).to_html
-                - if p.has_key?("desc")
-                    article.group.content-dynamic
-                        = Kramdown::Document.new(p["desc"]).to_html
-
-    section#all.section-article--small
-        .row.align-center
-            .columns.small-12.large-6.text-center.group
                 = partial "partials/snippets/button", :locals => { :label => "See All Datica Webinars", :url => "/webinars/", :button_classes => "button hollow", :item_id => "all_webinars", :icon => "icon-webinar-sm", :icon_align => "left" }
+
+    / section#all.section-article--small
+    /     .row.align-center
+    /         .columns.small-12.large-6.text-center.group
+                
                 / = inline_svg("icon-webinar", class: "icon-size--medium")
                 / h2.headline-5.spaced-out
                 /     a.link--dark href="/webinars" See All Webinars
