Cloud config survey copy update.

--- a/source/cloud-compliance-management-system/survey.html.slim
+++ b/source/cloud-compliance-management-system/survey.html.slim
@@ -44,10 +44,11 @@ scss:
         h2.headline-5.spaced-out
           a href="/cloud-compliance-management-system/" title="Back to Datica CCMS" Datica CCMS
     .row.align-center
-      .columns.small-12.medium-10.large-6
+      .columns.small-12.medium-10.large-8
         .group.text-center
           h1.headline-3 = current_page.data.title
-          p We want to make sure the Cloud Compliance Management System has you covered. <strong>Tell us what other cloud configurations you want to see.</strong>
+          p As of Autumn 2018, there are 187 HIPAA eligible services across the three major clouds of AWS, Azure, and GCP—a large number to keep track of. While the providers sign BAAs for these services, these agreements push the #{link_to 'burdens of HIPAA compliance', '/compliance/'} onto you. We'd like to know which services you think should be prioritized for compliant monitoring.
+          p.headline-4 Which cloud services do you want monitored for compliance?
         #form
           .callout.pad--lg
             / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
