--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -33,7 +33,7 @@ ruby:
           span aria-hidden="true" 
             = inline_svg("small/icon-close", class: "nav-button--icon")
           /&times;
-        .absolute.z-stack-zero.alert-ribbon--bg
+        .absolute.z-stack-0.alert-ribbon--bg
           img.lozad.relative.img-cover data-src="#{event_img}?fit=thumb&w=1200&h=48" data-srcset="#{event_img}?fit=thumb&w=800&h=200 640w, #{event_img}?fit=thumb&w=1000&h=48 1000w, #{event_img}?fit=thumb&w=1400&h=48&fm=png 1200w"
       javascript:
         var currPromoCookie = 'promo-#{cookie_name}';
