Basically working, but there's a disturbing blitting of the image over the content when it fades in. Several possibilities why.

--- a/source/assets/scss/views/blog.scss
+++ b/source/assets/scss/views/blog.scss
@@ -32,3 +32,11 @@
 //     }
 // }
 
+.featured-image {
+    overflow: hidden;
+    height: calc((8rem + 12vw) + .49px);
+    img {
+        width:  100%;
+        height: 100%;
+    }
+}
