--- a/source/partials/snippets/_person-small.erb
+++ b/source/partials/snippets/_person-small.erb
@@ -1,3 +1,4 @@
+<% p = data.site.person[p.id] %>
 <div class="media-object person-small">
     <% if p.has_key?("profile_pic") %>
         <div class="media-object-section media-object--avatar"><img class="lozad avatar avatar--medium circle" src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=48&h=48&fm=jpg&q=10" data-src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=96&q=40" alt="<%= p["fullname"] %>"></div>
