--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -280,7 +280,7 @@
 }
 
 // === overrides third-party hubspot forms, widgets, etc. ===
-.form-embed { // positioning landing page forms, pulls it up 
+.form-embed { // positioning landing page forms, pulls it up
     @include breakpoint(large) {
         margin-top: -4.5rem;
     }
@@ -314,6 +314,9 @@
     &-back {
         z-index: -10;
     }
+    &-bg {
+        z-index: -5;
+    }
     &-0 {
         z-index: 0;
     }
@@ -339,6 +342,10 @@
     @include breakpoint (large) {
         @include opacity(0.2);
     }
+}
+.opacity-0 {
+  transition: opacity $timing-default linear;
+  opacity: 0;
 }
 .opacity-100 {
     opacity: 100;
