--- a/source/assets/scss/views/blog.scss
+++ b/source/assets/scss/views/blog.scss
@@ -31,12 +31,6 @@
 //         color: $color_white;
 //     }
 // }
-
-.featured-image {
-    overflow: hidden;
-    height: calc((8rem + 12vw) + .49px);
-    img {
-        width:  100%;
-        height: 100%;
-    }
-}
+// .post-sidebar {
+//
+// }
