Reverting all the "person" components because of errors. I think anything that is passing a customer object to these will break. Holding off until the model changes in #104.

--- a/source/partials/snippets/_person-avatar.erb
+++ b/source/partials/snippets/_person-avatar.erb
@@ -1,5 +1,5 @@
 <%
-p = data.site.person[p.id]
+# p = data.site.person[p.id]
 if defined?(use_headers) && use_headers == true
     tag_1 = "h3"
     tag_2 = "h4"
