--- a/source/partials/snippets/_person-vertical.erb
+++ b/source/partials/snippets/_person-vertical.erb
@@ -1,5 +1,5 @@
 <%
-p = data.site.person[p.id]
+# p = data.site.person[p.id]
 if defined?(use_headers) && use_headers == true
     tag_1 = "h3"
     tag_2 = "h4"
