apparently blur filters interfere with .sticky somehow; changing the scoping of where the utility classes are applied seems to work. Refined loading transitions, looks really smooth now.

--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -82,6 +82,9 @@ figcaption{
     @include blend-multiply;
 }
 .blur {
+    &-0 {
+        @include blur(0);
+    }
     &-1 {
         @include blur(1px);
     }
@@ -93,6 +96,7 @@ figcaption{
     }
 }
 .loading-blur {
+    transition: filter 0.3s;
     @include blur(1vw);
 }
 .diffuse { // combo
