--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -54,8 +54,19 @@ scss:
       width:  100%;
       height: 100%;
     }
+    .lozad {
+      filter:         blur(2vw);
+      transition: opacity 0.3s, filter 0.3s, -webkit-filter 0.3s, -moz-filter 0.3s, -o-filter 0.3s, -ms-filter 0.3s;
+      -webkit-transition-delay: 1s;
+      transition-delay:         1s;
+    }
     .lozad.loaded {
-      transition: none;
+      //transition: none;
+      filter:         blur(0);
+      -webkit-filter: blur(0); /* Prefixed CSS3 blur filters */
+      -moz-filter:    blur(0);
+      -o-filter:      blur(0);
+      -ms-filter:     blur(0);
     }
   }
   .post-body {// pull up over image for desktop only
@@ -90,10 +101,10 @@ scss:
   }
 .container-gray-11
   .featured-image.container-gray-3
-    img.lozad.img-cover src="#{post_featured_image}?w=250&fm=jpg&q=10" data-src="#{post_featured_image}?fit=thumb&w=1800&h=600" height="315"
-  section#blogPost.row.collapse.align-center
+    img.lozad.img-cover src="#{post_featured_image}?fit=thumb&w=400&h=100&fm=jpg&q=5" data-srcset="#{post_featured_image}?fit=thumb&w=640&h=360&q=50 640w, #{post_featured_image}?fit=thumb&w=800&h=400&q=40 800w, #{post_featured_image}?fit=thumb&w=1800&h=400 1200w" /
+  section#blogPost.row.collapse.align-center style="opacity: 1;"
     .columns.small-12.large-8
-      article.post-body.container-color--white.pad--xl.group--2x.drop
+      article.post-body.blur-0.container-color--white.pad--xl.group--2x.drop
         header
           .subhead--spaced.headline-6
             = partial "/partials/snippets/pubdate", :locals => p
@@ -133,7 +144,7 @@ scss:
               .text-smaller
                 = Kramdown::Document.new(next_item["summary"]).to_html
 
-    aside.post-sidebar.columns.small-12.large-4 style="margin-top: 1rem;" data-sticky-container=""
+    aside.post-sidebar.columns.small-12.large-4 style="margin-top: 1rem; opacity: 1;" data-sticky-container=""
       .sticky data-options=("topAnchor: 525; stickyOn: xlarge; marginTop: 3;") data-btm-anchor="cta" data-sticky=""
         .pad--lg
           .group
